# lmcomplete

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  TODO.md
.github/scripts/: extract-changelog.sh  package-version.sh  verify-version.sh
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: config.example.toml
docs/adr/: 001-initial-architecture.md  002-v1-operational-decisions.md
docs/brand/: README.md
docs/launch/: terminal-demo-plan.md
docs/uat/: UAT-01-manual-testing.md
eval/: README.md  dataset.jsonl
src/: cli.rs  config.rs  lib.rs  main.rs  output.rs  redaction.rs  safety.rs  stats.rs
src/commands/: audit.rs  expand.rs  explain.rs  init.rs  mod.rs  stats.rs
src/context/: cwd.rs  history.rs  mod.rs  shell.rs
src/prompt/: builder.rs
src/provider/: mod.rs  ollama.rs  openrouter.rs
src/shell/: zsh_widget.zsh
tests/: cli.rs
video/: package-lock.json  package.json  tsconfig.json
video/src/: LmcDemo.tsx  Root.tsx
video/src/components/: Scene1Install.tsx  Scene2Onboarding.tsx  Scene3Expansion.tsx  Scene4Explanation.tsx  Scene5Trust.tsx  Scene6Stats.tsx  Terminal.tsx
