[package]
name = "lmcomplete"
version = "0.1.0"
edition = "2024"
description = "Context-aware shell command expansion and explanation"
license = "MIT"
repository = "https://github.com/MatteoSava/lmcomplete"
homepage = "https://github.com/MatteoSava/lmcomplete"
documentation = "https://docs.rs/lmcomplete"
keywords = ["cli", "shell", "llm", "terminal", "openrouter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lmc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
secretscan = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
